--- a/index.html
+++ b/index.html
@@ -12,11 +12,28 @@
             <h1>Welcome to My Web Page</h1>
         </header>
         <main>
+            <h2>This is FRUITS images</h2>
+            <img src="images/APPLE.webp" alt="Apple" width="100" />
+            <img src="images/AVOCADO.webp" alt="Avocado" width="100" />
+            <img src="images/BANANA.webp" alt="Banana" width="100" />
+            <img src="images/CHERRY.webp" alt="Cherry" width="100" />   
+            <img src="images/GRAPE.webp" alt="Grape" width="100" />
+            <br>
+            <img src="images/GRAPE.webp" alt="Grape" width="100" />
+            <img src="images/CHERRY.webp" alt="Cherry" width="100" />   
+            <img src="images/BANANA.webp" alt="Banana" width="100" />
+            <img src="images/AVOCADO.webp" alt="Avocado" width="100" />
+            <img src="images/APPLE.webp" alt="Apple" width="100" />
             <section>
                 <h2>About Me</h2>
                 <p>This is a brief introduction about myself.</p>
             </section>
             <section>
+                <ol>
+                    <li>First item</li>
+                    <li>Second item</li>
+                    <li>Third item</li>
+                </ol>
                 <h2>My Projects</h2>
                 <ul>
                     <li>Project 1</li>
